--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,9 @@ email: felix@divo.link
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   The personal website of me, Felix Divo. I'm a computer scientist and tinkerer.
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> an the <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme ♥.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  <a href="??">Imprint / Impressum</a>.
-keywords:  # add your own keywords or leave empty
+  # <a href="??">Imprint / Impressum</a>.
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 👨‍💻 # the emoji used as the favicon
 url: http://localhost:4000 # the base hostname & protocol for your site
@@ -62,13 +61,15 @@ orcid_id: 0000-0002-1916-7711 # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
-research_gate_profile: # your profile on ResearchGate
+research_gate_profile: Felix-Divo # your profile on ResearchGate
 blogger_url: # your blogger URL
 work_url: # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
-dblp_url: # your DBLP profile url
+dblp_url: "https://dblp.org/pid/263/4925.html" # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
+
+rss_icon: false
 
 contact_note: >
   For topics related to GitHub projects, please file issues there.
@@ -215,7 +216,7 @@ scholar:
   locale: en
 
   source: /_bibliography/
-  bibliography: papers.bib
+  bibliography: ["papers.bib", "theses.bib"]
   bibliography_template: bib
   # Note: if you have latex math in your bibtex, the latex filter
   # preprocessing may conflict with MathJAX if the latter is enabled.
@@ -274,7 +275,7 @@ enable_google_verification: false  # enables google site verification
 enable_bing_verification:   false  # enables bing site verification
 enable_masonry:             true   # enables automatic project cards arangement
 enable_math:                true   # enables math typesetting (uses MathJax)
-enable_tooltips:            false  # enables automatic tooltip links generated
+enable_tooltips:            true   # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
 enable_darkmode:            true   # enables switching between light/dark modes
 enable_navbar_social:       false  # enables displaying social links in the
