--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: felix@divo.link
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   The personal website of me, Felix Divo. I'm a computer scientist and tinkerer.
 footer_text: >
-  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> an the <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme ♥.
+  Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> an the wondeful <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   # <a href="??">Imprint / Impressum</a>.
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
