--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ description: >
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> an the wondeful <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  # <a href="??">Imprint / Impressum</a>.
+# <a href="??">Imprint / Impressum</a>.
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 👨‍💻 # the emoji used as the favicon
-url: http://localhost:4000 # the base hostname & protocol for your site; For local builds: http://localhost:4000
+url: https://felix.divo.link/ # the base hostname & protocol for your site; For local builds: http://localhost:4000
 baseurl: # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
