--- a/_config.yml
+++ b/_config.yml
@@ -106,9 +106,9 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # External sources.
 # If you have blog posts published on medium.com or other exteranl sources,
 # you can display them in your blog by adding a link to the RSS feed.
-external_sources:
-  - name: medium.com
-    rss_url: https://medium.com/@al-folio/feed
+external_sources: []
+#  - name: medium.com
+#    rss_url: https://medium.com/@al-folio/feed
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -280,7 +280,7 @@ enable_masonry:             true   # enables automatic project cards arangement
 enable_math:                true   # enables math typesetting (uses MathJax)
 enable_tooltips:            true   # enables automatic tooltip links generated
                                    # for each section titles on pages and posts
-enable_darkmode:            false  # enables switching between light/dark modes
+enable_darkmode:            false  # enables switching between light/dark modes; TODO re-activate
 enable_navbar_social:       false  # enables displaying social links in the
                                    # navbar on the about page
 enable_project_categories:  true   # enables categorization of projects into
