--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: felixdivo # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
+twitter_username: felixdivo # your Twitter handle
 linkedin_username: felix-divo # your LinkedIn user name
 scholar_userid: TOu-cpQAAAAJ # your Google Scholar ID
 orcid_id: 0000-0002-1916-7711 # your ORCID ID
